--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "start": "webpack-dev-server --progress --colors --display-error-details --host=0.0.0.0",
     "watch": "webpack --watch --progress --colors --display-error-details"
   },
-  "dependencies": {},
+  "dependencies": {
+    "d3": "^3.5.17"
+  },
   "devDependencies": {
     "eslint": "^3.0.0",
     "file-loader": "^0.8.5",
